[`with-libraries/`] Upgrades